# kmerj

./: CMakeLists.txt  README.md
src/: kmer.cpp  kmer.hpp  kmerj.cpp  kmerj.hpp  main.cpp  melting.cpp  melting.hpp
